window-popup-overflower fix

--- a/css/common.css
+++ b/css/common.css
@@ -1482,7 +1482,7 @@ form .status_message {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 200%;
     background: url('../img/opacity.png');
     background: rgba(1,0,0,0.55);
 }
